--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "echo 'Service runs on Google Cloud Run'",
     "build": "echo 'Build handled by Cloud Build'",
     "test": "echo 'Add your test command here'",
-    "dev": "echo 'For local development, open src/index.html in your browser'"
+    "dev": "echo 'For local development, open src/index.html in your browser'",
+    "deploy:hostgator": "node deploy-hostgator.js",
+    "deploy:cloudrun": "gcloud builds submit --config cloudbuild.yaml ."
   },
   "keywords": [
     "web",
@@ -18,7 +20,9 @@
   ],
   "author": "",
   "license": "MIT",
-  "dependencies": {}
+  "dependencies": {
+    "basic-ftp": "^5.0.0"
+  },
   "devDependencies": {
     "nodemon": "^3.0.1"
   },
