--- a/nginx.conf
+++ b/nginx.conf
@@ -41,8 +41,6 @@ http {
     server {
         listen 8080;
         server_name _;
-        root /usr/share/nginx/html;
-        index index.html;
 
         # Security headers
         add_header X-Frame-Options "SAMEORIGIN" always;
@@ -50,21 +48,26 @@ http {
         add_header X-XSS-Protection "1; mode=block" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
 
-        # Cache static assets
-        location ~* \.(css|js|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-        }
-
-        # Handle HTML files
-        location ~* \.html$ {
-            expires 1h;
-            add_header Cache-Control "public";
-        }
-
-        # Fallback for SPA routing
+        # Transparent proxy to zaido.org (staging)
         location / {
-            try_files $uri $uri/ /index.html;
+            proxy_pass https://zaido.org;
+            proxy_set_header Host zaido.org;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Preserve original request headers
+            proxy_set_header Accept-Encoding "";
+            proxy_set_header Accept-Language $http_accept_language;
+            proxy_set_header User-Agent $http_user_agent;
+            
+            # Handle redirects
+            proxy_redirect https://zaido.org https://myl.zip;
+            
+            # Timeout settings
+            proxy_connect_timeout 30s;
+            proxy_send_timeout 30s;
+            proxy_read_timeout 30s;
         }
 
         # Health check endpoint
