--- a/nginx.conf
+++ b/nginx.conf
@@ -38,6 +38,9 @@ http {
         application/atom+xml
         image/svg+xml;
 
+    # MyL.Zip Transparent Proxy Server
+    # This server acts as a transparent proxy layer forwarding requests to zaido.org
+    # In other deployments, this may serve unique content instead of proxying
     server {
         listen 8080;
         server_name _;
