Implement hybrid architecture: myl.zip serves client endpoints locally + proxies www content to zaido.org

--- a/nginx.conf
+++ b/nginx.conf
@@ -51,7 +51,25 @@ http {
         add_header X-XSS-Protection "1; mode=block" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
 
-        # Transparent proxy to zaido.org (staging)
+        # Serve local content for authentication and setup endpoints
+        location ~ ^/(auth|setup-wizard\.html|api/.*) {
+            root /usr/share/nginx/html;
+            try_files $uri $uri/ /index.html;
+            
+            # Cache static assets
+            location ~* \.(css|js|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+                expires 1y;
+                add_header Cache-Control "public, immutable";
+            }
+            
+            # Handle HTML files
+            location ~* \.html$ {
+                expires 1h;
+                add_header Cache-Control "public";
+            }
+        }
+        
+        # Transparent proxy to zaido.org (staging) for main www content
         location / {
             proxy_pass https://zaido.org;
             proxy_set_header Host zaido.org;
