--- a/.htaccess
+++ b/.htaccess
@@ -18,11 +18,6 @@ RewriteRule ^setup-wizard/$ /setup-wizard.html [R=301,L]
     Header always set X-Frame-Options DENY
     Header always set X-XSS-Protection "1; mode=block"
     Header always set Referrer-Policy "strict-origin-when-cross-origin"
-    
-    # TEMPORARY: Disable caching to force refresh of new design
-    Header always set Cache-Control "no-cache, no-store, must-revalidate"
-    Header always set Pragma "no-cache"
-    Header always set Expires "0"
 </IfModule>
 
 # Enable compression
@@ -38,7 +33,14 @@ RewriteRule ^setup-wizard/$ /setup-wizard.html [R=301,L]
     AddOutputFilterByType DEFLATE application/x-javascript
 </IfModule>
 
-# TEMPORARY: Disable caching for all files
+# Cache control for static assets
 <IfModule mod_expires.c>
-    ExpiresActive Off
+    ExpiresActive On
+    ExpiresByType text/css "access plus 1 month"
+    ExpiresByType application/javascript "access plus 1 month"
+    ExpiresByType image/png "access plus 1 month"
+    ExpiresByType image/jpg "access plus 1 month"
+    ExpiresByType image/jpeg "access plus 1 month"
+    ExpiresByType image/gif "access plus 1 month"
+    ExpiresByType image/svg+xml "access plus 1 month"
 </IfModule>
