--- a/package.json
+++ b/package.json
@@ -1,70 +1,24 @@
 {
-  "name": "zip-myl-www",
+  "name": "myl-zip-web-frontend",
   "version": "1.0.0",
-  "description": "Dual-path static site: Staging (Hostgator) + Portal (Google Cloud Run)",
-  "main": "index.js",
+  "description": "Web frontend for MyL.zip SSL certificate management and cross-platform chat",
+  "main": "src/index.html",
   "scripts": {
-    "start": "python -m http.server 8080",
-    "dev": "python -m http.server 8080",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "test:ci": "jest --ci --coverage --watchAll=false",
-    "test:unit": "jest --testPathPattern=tests/unit",
-    "test:integration": "jest --testPathPattern=tests/integration",
-    "test:security": "jest --testPathPattern=tests/security",
-    "test:performance": "jest --testPathPattern=tests/performance",
-    "lint": "eslint src/ tests/",
-    "lint:fix": "eslint src/ tests/ --fix",
-    "lint:strict": "eslint src/ tests/ --max-warnings=0",
-    "format": "prettier --write src/ tests/",
-    "format:check": "prettier --check src/ tests/",
-    "security:audit": "npm audit --audit-level=moderate",
-    "deps:check": "npm outdated",
-    "deps:update": "npm update",
-    "build": "npm run lint:strict && npm run test:ci && echo 'Production build complete'",
-    "build:test": "npm run lint:strict && npm run test:ci",
-    "precommit": "npm run lint:strict && npm run format:check && npm run test:unit",
-    "build:staging": "node scripts/build-staging.js",
-    "build:portal": "node scripts/build-portal.js",
-    "build:shared": "node scripts/build-shared.js",
-    "build:all": "npm run build:shared && npm run build:staging && npm run build:portal",
-    "deploy:staging": "npm run build:staging && cd hostgator && deploy.bat",
-    "deploy:portal": "npm run build:portal && git add . && git commit -m 'Portal update' && git push",
-    "deploy:all": "npm run build:all && npm run deploy:staging && npm run deploy:portal",
-    "sync:staging-to-portal": "cd hostgator && sync-to-portal.bat",
-    "sync:portal-to-staging": "cd cloud-run && sync-to-staging.bat",
-    "test:staging": "cd staging && python -m http.server 8000",
-    "test:portal": "cd portal && python -m http.server 8001",
-    "prepare": "husky install"
+    "start": "python -m http.server 8080 --directory src",
+    "dev": "python -m http.server 8080 --directory src",
+    "build": "echo 'No build process needed - using Tailwind CDN'"
   },
   "dependencies": {
-    "basic-ftp": "^5.0.3"
+    "tailwindcss": "^3.4.0"
   },
-  "devDependencies": {
-    "fs-extra": "^11.1.1",
-    "chalk": "^4.1.2",
-    "@types/jest": "^29.5.8",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-jest": "^27.9.0",
-    "eslint-plugin-security": "^2.1.0",
-    "husky": "^8.0.3",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "jest-watch-typeahead": "^2.2.2",
-    "prettier": "^3.2.5",
-    "puppeteer": "^22.0.0",
-    "supertest": "^6.3.3"
-  },
+  "devDependencies": {},
   "keywords": [
-    "static-site",
-    "staging",
-    "portal",
-    "hostgator",
-    "cloud-run",
-    "dual-path"
+    "web-frontend",
+    "ssl",
+    "security",
+    "chat",
+    "myl-zip"
   ],
-  "author": "Zip MyL Team",
+  "author": "MyL.zip Team",
   "license": "MIT"
 }
